syntax = "proto3";

package auth;

option go_package = "github.com/cumraod/grpc-clone/proto/auth";

// Authentication service
service AuthService {
  // Login user and get JWT token
  rpc Login(LoginRequest) returns (LoginResponse);
  
  // Logout user by blacklisting token
  rpc Logout(LogoutRequest) returns (LogoutResponse);
}

// Login request message
message LoginRequest {
  string email = 1;
  string password = 2;
}

// Login response message
message LoginResponse {
  bool success = 1;
  string token = 2;
  string message = 3;
  User user = 4;
}

// Logout request message
message LogoutRequest {
  string token = 1;
}

// Logout response message
message LogoutResponse {
  bool success = 1;
  string message = 2;
}

// User message for auth responses
message User {
  int32 id = 1;
  string email = 2;
  string name = 3;
  string created_at = 4;
  string updated_at = 5;
}
